test/mutation_analysis/s0496_next_greater_element_i/hafis/ablation_o3_r50/mutants/6/result.txt
./test/mutation_analysis/s0496_next_greater_element_i/hafis/ablation_o3_r50/mutants/6/Solution.java:24: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
